# PacMan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icon.rc  version.rc
assets/textFiles/: maze.txt  settings.txt
res/TextFiles/: configs.txt  highscores.txt  settings.txt
src/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/AI/: IActorState.h
src/AI/ghost/: ChaseState.cpp  EatenState.cpp  EatenState.h  FrightenedState.cpp  FrightenedState.h  GIdleState.cpp  GhostState.h  ScatterState.cpp  ScatterState.h
src/Animations/: GhostAnimations.cpp  GhostAnimations.h  GridAnimation.cpp  GridAnimation.h  PacManAnimations.cpp  PacManAnimations.h  PelletAnimations.cpp  PelletAnimations.h
src/Common/: Constants.h  GameEvents.h  ObjectReferenceKeeper.cpp  ObjectReferenceKeeper.h
src/GameObjects/: Actors.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  PacMan.cpp  PacMan.h  Pellet.cpp  Pellet.h  Sensor.cpp  Sensor.h  Wall.cpp  Wall.h
src/Grid2D/: Grid.cpp  Grid.h
src/PathFinders/: GhostGridMover.cpp  GhostGridMover.h  PacManGridMover.cpp  PacManGridMover.h
src/Scenes/: CollisionResponseRegisterer.cpp  CollisionResponseRegisterer.h  GameOverScene.cpp  GameOverScene.h  GameplayScene.cpp  GameplayScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  PauseMenuScene.cpp  StartUpScene.cpp
src/Scoreboard/: Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h
src/Utils/: ObjectCreator.cpp  ObjectCreator.h  Utils.cpp  Utils.h
src/Views/: GameOverSceneView.cpp  GameOverSceneView.h  GameplaySceneView.cpp  GameplaySceneView.h  LoadingSceneView.cpp  LoadingSceneView.h  MainMenuSceneView.h  PauseMenuSceneView.cpp  PauseMenuSceneView.h  StartUpSceneView.cpp  StartUpSceneView.h
src/ai/: ActorStateFSM.cpp  ActorStateFSM.h
src/ai/ghost/: ChaseState.cpp  ChaseState.h  EatenState.cpp  EatenState.h  FrightenedState.cpp  FrightenedState.h  GIdleState.cpp  GIdleState.h  GhostState.cpp  GhostState.h  ImprisonedState.cpp  ScatterState.cpp  ScatterState.h
src/animations/: GhostAnimations.cpp  GhostAnimations.h  GridAnimation.cpp  GridAnimation.h  PacManAnimations.cpp  PacManAnimations.h  PelletAnimations.cpp  PelletAnimations.h
src/common/: Constants.h  GameEvents.h  ObjectReferenceKeeper.cpp  ObjectReferenceKeeper.h  PositionTracker.cpp  PositionTracker.h
src/models/actors/: Actors.h  Fruit.cpp  Ghost.cpp  Ghost.h  PacMan.cpp  PacMan.h  Pellet.cpp  Pellet.h  Sensor.cpp  Wall.cpp
src/models/actors/controllers/: ForwardDirectionalBFS.cpp  ForwardDirectionalBFS.h  GhostGridMover.cpp  GhostGridMover.h  PacManGridMover.cpp  PacManGridMover.h
src/models/actors/states/: ActorStateFSM.cpp  ActorStateFSM.h  IActorState.h
src/models/actors/states/ghost/: ChaseState.cpp  ChaseState.h  EatenState.cpp  EatenState.h  FrightenedState.cpp  FrightenedState.h  GIdleState.cpp  GIdleState.h  GhostState.cpp  GhostState.h  ImprisonedState.cpp  ImprisonedState.h  ScatterState.cpp  ScatterState.h
src/models/game/: Game.cpp
src/models/scenes/: CollisionResponseRegisterer.cpp  CollisionResponseRegisterer.h  GameOverScene.cpp  GameOverScene.h  GameplayScene.cpp  GameplayScene.h  LoadingScene.cpp  MainMenuScene.cpp  MainMenuScene.h  PauseMenuScene.cpp  PauseMenuScene.h  StartUpScene.cpp  StartUpScene.h
src/models/scoreboard/: Scoreboard.h
src/models/world/: Grid.cpp  Grid.h
src/movement/: GhostGridMover.cpp  GhostGridMover.h  PacManGridMover.cpp
src/utils/: ObjectCreator.cpp  ObjectCreator.h  Utils.cpp
src/views/: GameOverSceneView.cpp  GameOverSceneView.h  GameplaySceneView.cpp  GameplaySceneView.h  LoadingSceneView.cpp  MainMenuSceneView.cpp  MainMenuSceneView.h  PauseMenuSceneView.cpp  StartUpSceneView.cpp
